--- a/.github/workflows/ci-build.yaml
+++ b/.github/workflows/ci-build.yaml
@@ -12,7 +12,7 @@ jobs:
 
     services:
       postgres:
-        image: postgres:alphine
+        image: postgres:alpine
         ports: 
           - 5432:5432
         env:
