--- a/tekton/pipeline.yaml
+++ b/tekton/pipeline.yaml
@@ -12,6 +12,7 @@ spec:
   workspaces:
     - name: pipeline-workspace
   params:
+    - name: build-image
     - name: repo-url
     - name: branch
       default: main
@@ -61,6 +62,20 @@ spec:
       - name: database_uri
         value: "sqlite:///test.db"
       - name: args
-        value: ["-v","--max-complexity=10","--max-line-length=127","--statistics"]
+        value: "-v --with-spec --spec-color"
       runAfter:
         - clone
+
+    - name: build
+      workspaces:
+        - name: source
+          workspace: pipeline-workspace
+      taskRef:
+        name: buildah
+        kind: ClusterTask
+      params:
+      - name: IMAGE
+        value: "$(params.build-image)"
+      runAfter:
+        - tests
+        - lint
